re PR other/29639 (ext/bitmap_allocator/check_allocate_max_size.cc execution test)

PR other/29639
	* except.c (switch_to_exception_section): Do not cache the section
	if named sections are supported and HAVE_LD_EH_GC_SECTIONS is defined
	and flag_function_sections is set.

From-SVN: r118422